<?xml version="1.0" encoding="utf-8"?>
<fragment
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/step_list_fragment"
        android:name="br.com.martins.bakingtime.step.StepListFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />