<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/fl_step_list">

    <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_step_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    <TextView
            android:id="@+id/tv_error_message_display_steps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="16dp"
            android:visibility="gone"
            style="@style/ContentText"/>

</FrameLayout>